# beanzmc

./: .gitignore  CMakeLists.txt  README.md
server/: CMakeLists.txt
server/src/mc/: mc_entities.h
server/src/nbt/: nbt.cpp  nbt.h  nbt.hpp
server/src/network/: mc_state_handler.cpp  mc_state_handler.h  server.cpp  server.h
server/src/network/packets/: data_types.h  packet_dispatcher.cpp  packet_dispatcher.h  packet_handler.h  packet_serializer.cpp  packet_serializer.h  var_types.h
server/src/network/packets/client/: client_login_packets.h  client_play_packets.h  client_status_packets.h
server/src/network/packets/handlers/: play_packet_handler.cpp  play_packet_handler.h
server/src/network/packets/handlers/impl/: client_keep_alive.h
server/src/network/packets/server/: server_login_packets.h  server_play_packets.h  server_status_packets.h
server/src/util/: data_helper.h  mem_util.h
src/: defines.h  main.cpp
src/network/: server.cpp  server.h
src/network/packets/: data_types.h  packet_handler.h
tests/: CMakeLists.txt  packet_handler_tests.cpp
